Estilização do Rodapé e mudança da logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/logo_ico.ico" type="image/x-icon">
     <meta property="og:image" content="https://www.777py.com/imagens/777py-cover.png">
     <meta property="og:title" content="777py - Previsões Inteligentes para Esportes, Política e Clima">
     <meta name="keywords" content="777py, 777Angola, apostas, aposta em Angola, palpites, ciência, estatísticas">
@@ -28,7 +28,7 @@
     
     <header class="menu">
         <nav>
-            <a href="index.html"><h1>777<sup>PY</sup></h1></a>
+            <a href="./index.html" rel="noopener noreferrer nofollow"><img src="assets/img/logo.png" alt="imagem da logo do 777PY" srcset="assets/img/logo.png" class="imgLogoMenu"></a>
         </nav>
         <nav class="navMobilePorra">
             <nav class="navLinksMenu">
@@ -171,7 +171,7 @@
                 <p id="textoHero">A <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span> está dando uma chance real e única: transformar os teus palpites em reconhecimento, oportunidade e recompensa de verdade. Aqui, a tua intuição, estratégia e palpite viram ciência. Enquanto muitos apostam no escuro e perdem dinheiro, você usa <span style="font-weight: 500;">777</span> com estratégia, foco e coragem. E em apenas 10 dias ganharás 2.500.000 de kwanzas. A pergunta é simples: <span class="textoGradiente" style="font-weight: bold;">Vais continuar a sonhar… ou vais fazer acontecer com a 777PY?</span></p>
                 <nav class="navBtns">
                     <a href="#"><button class="btn btn0">Saiba Mais</button></a>
-                    <a href=""><button class="btn">Assistir Vídeo Explicativo</button></a>
+                    <a href=""><button class="btn">Assistir Vídeo Explicativo <i class="fa-solid fa-circle-play"></i></button></a>
                 </nav>
             </nav>
             <nav class="slide-right">
@@ -183,7 +183,7 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Saiba<span class="textoSemEfeito"> Como Funciona.</span></h2>
-                    <p class="textoSecao">Estamos à tua espera — e acreditamos que o teu palpite vale ouro. Escolhe a modalidade que dominas, como futebol, boxe ou basquetebol, e monta os teus palpites certeiros com total liberdade. Podes escolher qualquer tipo de código: total de golos/pontos, vencedor direto, handicaps, parte mais produtiva ou outros mercados à tua escolha. Decide se queres apostar num único jogo, numa múltipla ou até numa construção mais elaborada. Só precisas garantir que o total de pontos por palpite esteja entre 5 e 10 pontos. Depois disso, é simples: tira um screenshot ou envia o ID do teu palpite para nós através do WhatsApp, e-mail ou Facebook. Continua a participar durante 10 dias consecutivos, e se acertares todos os palpites... ganhas 2.500.000 Kz na hora!</p>
+                    <p class="textoSecao">Estamos à tua espera — e acreditamos que o teu palpite vale ouro. 777 é um verdadeiro teste de visão, estratégia e coragem. Na 777 cada escolha conta, cada detalhe importa. Aqui, você a total liberdade para que mostres o teu talento nas modalidades que dominas. Mostre que és diferente!</p>
                 </nav>
                 <nav>
                     <p class="textoSecaoLado">Acreditamos em você e na tua estratégia que o ajudará a <span class="textoColorido">ganhar milhões de kwanzas</span> em 10 dias. Junte-se a <span class="textoColorido">777PY</span> e mostre o poder da tua <span class="textoColorido">intuição, raciocínio e palpites.</span> Transforme em conquistas <span class="textoColorido">reais e lucrativas.</span></p>
@@ -259,10 +259,10 @@
                         <i class="fa-solid fa-trophy"></i>
                     </nav>
                     <nav class="titleFunciona">
-                        <h4>Ganhe os seus prémios</h4>
+                        <h4>Torne-se milionário em 10 dias</h4>
                     </nav>
                     <nav>
-                        <p class="textoFunciona">Acertaste os 10 dias? Parabéns, estás automaticamente entre os grandes vencedores. Mesmo que haja 10 ganhadores, todos recebem o valor completo, sem divisão ou redução. Atenção: se errar 2 ou mais palpites durante o desafio, poderás ser desclassificado ou ter o prémio ajustado conforme o teu desempenho.</p>
+                        <p class="textoFunciona">Acertaste os 10 dias? Parabéns, você ganhou 2.5 milhões em 10 dias. Mesmo que haja 10 ganhadores, todos recebem o valor completo, sem divisão ou redução. Atenção: se errar 2 ou mais palpites durante o desafio, poderás ser desclassificado ou ter o prémio ajustado conforme o teu desempenho.</p>
                     </nav>
                 </nav>
 
@@ -291,10 +291,10 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Quem Pode <span class="textoSemEfeito">Participar?</span></h2>
-                    <p class="textoSecao">Temos o conhecimento da lei angolana que proibe a participação em apostas ou jogos de azar para menores de idade. Mas o 777Py não é uma casa de aposta ou jogo de azar. Promovemos uma pesquisa cientifíca e experimentos que estamos conduzindo, que aprimorar, otimizar, treinar o nosso software e analisar como pessoas de diferentes idades lidam com decisões que baseadas em probabilidades. Não é um jogo de azar, é metodologia científica de estudo e aprendizado e qualquer pessoa está totalmente apta a participação na nossa pesquisa. O único compromisso exigido é o seu palpite certeiro.</p>
+                    <p class="textoSecao">Sabemos que, de acordo a lei angolana, menores de idade não podem participar em apostas ou jogos de azar. Esclarecemos que 777 não é uma casa de aposta, nem promove jogos de azar. Promovemos uma pesquisa cientifíca e experimentos que visam aprimorar, otimizar, treinar o nosso software e analisar como pessoas de diferentes idades lidam com decisões baseadas em probabilidades. O único compromisso exigido é o seu palpite certeiro.</p>
                 </nav>
                 <nav>
-                    <p class="textoSecaoLado">Todos podem participar, é um desafio abrangente e inclusivo. Não proibições de <span class="textoColorido">idade, género, habilidades, nacionalidade ou preferências de casas de apostas.</span> Esperamos por si e pelos seus palpites</p>
+                    <p class="textoSecaoLado">Todos podem participar, é um desafio abrangente e inclusivo. Não proibições de <span class="textoColorido">idade, género, habilidades, nacionalidade ou preferências desportivas.</span> Esperamos por si e pelos seus palpites</p>
                 </nav>
             </div>
 
@@ -315,7 +315,7 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Conheça a <span class="textoSemEfeito">777<sup style="color: #40E194; -webkit-text-stroke: #40E194;">PY</sup></span></h2>
-                    <p class="textoSecao">É um projeto científico puramente angolano. Criada e fundada por jovens angolanos apaixonados por tecnologia, matemática e ciência. O projeto nasceu de uma visão ousada de transformar a intuição e o conhecimento dos apostadores em uma força real dentro do universo das estátisticas e previsões de diferentes eventos. O nome "777PY" carrega consigo dois significados poderosos: O número 777 é um número que carrega significados profundos em diversas áreas - espiritualidade, cultura, matemática, religião, simbologia e até no mundo dos jogos - é considerado um número matematicamente fascinante e divinamente perfeito. O "PY" é homenagem ao Python, a linguagem de programação usada nos nossos algoritmos estatísticos e análises matemáticas.</p>
+                    <p class="textoSecao">777PY é projeto científico 100% angolano, idealizada e fundada por jovens angolanos apaixonados por tecnologia, matemática e ciência. Nasceu de uma visão ousada: transformar a intuição e o conhecimento dos palpiteiros em dados valiosos no universo das estátisticas e previsões de diferentes eventos. O nome "777PY" carrega dois símbolos poderosos: 777 é um número que carrega significados profundos em - espiritualidade, cultura, matemática, religião, simbologia e até no mundo dos jogos - é considerado um número matematicamente fascinante e divinamente perfeito. O "PY" é homenagem ao Python, a linguagem de programação usada nos nossos algoritmos e análises.</p>
                 </nav>
                 <nav>
                     <p class="textoSecaoLado">A nossa equipe é uma combinação de <span class="textoColorido">nerds, cientistas da computação, programadores, designers, matemáticos e teóricos de estatísticas.</span> Juntos, acreditamos podemos criar algo grandioso e abrir<span class="textoColorido"> oportunidades reais a apostadores</span> talentosos e sonhadores. Aqui, <span class="textoColorido">o teu raciocínio</span> é valorizado.</p>
@@ -326,7 +326,7 @@
                 <nav class="CardFundador">
                     <div class="efeitoCard0 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/fundador4.png" alt="" srcset="">
+                        <img src="assets/img/fundador_calebe.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Calebe "CL" Lukombo
@@ -341,7 +341,7 @@
                 <nav class="CardFundador">
                     <div class="efeitoCard2 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/fundador1.png" alt="" srcset="">
+                        <img src="assets/img/fundadora_maria.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Maria Lumengo
@@ -356,7 +356,7 @@
                 <nav class="CardFundador">
                     <div class="efeitoCard4 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/fundador3.png" alt="" srcset="">
+                        <img src="assets/img/fundador_adilson.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Adilson "AL" Lukombo
@@ -371,7 +371,7 @@
                 <nav class="CardFundador">
                     <div class="efeitoCard6 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/fundador3.png" alt="" srcset="">
+                        <img src="assets/img/fundador_nkosi.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Nkosi Simão
@@ -386,7 +386,7 @@
                 <nav class="CardFundador">
                     <div class="efeitoCard8 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/fundador3.png" alt="" srcset="">
+                        <img src="assets/img/fundador_aguinaldo.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Aguinaldo "AG" Jacob
@@ -401,7 +401,7 @@
                 <nav class="CardFundador">
                     <div class="efeitoCard10 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/fundador2.png" alt="" srcset="">
+                        <img src="assets/img/fundador_nacho.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Nacho
@@ -416,7 +416,7 @@
                 <nav class="CardFundador">
                     <div class="efeitoCard12 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/fundador3.png" alt="" srcset="">
+                        <img src="assets/img/fundador_alexandre.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Alexandre Afonso
@@ -431,7 +431,7 @@
                 <nav class="CardFundador">
                     <div class="efeitoCard14 efeitoCard"></div>
                     <nav class="imgFundador">
-                        <img src="assets/img/fundador.png" alt="" srcset="">
+                        <img src="assets/img/fundadora_nalita.png" alt="" srcset="">
                     </nav>
                     <nav class="nomeFundador">
                         Nalita Kiambi
@@ -457,10 +457,10 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Perguntas <span class="textoSemEfeito">Frequentes</span></h2>
-                    <p class="textoSecao">Seja bem-vindo a nossa seção de Perguntas Frequentes (FAQ). No 777PY, nos empenhamos em oferecer uma experiência transparente e educativa, sempre com foco na pesquisa científica. Sabemos que, muitas vezes, o processo de entender um projeto como esse gera dúvidas, por isso criamos esta área para esclarecer as questões mais comuns. Nossa equipe está pronta para responder todas as suas perguntas e fornecer suporte necessário para que você possa aproveitar ao máximo tudo o que o 777Py tem a oferecer.</p>
+                    <p class="textoSecao">Seja bem-vindo a nossa seção de Perguntas Frequentes (FAQ). No 777PY, priorizamos a clareza, a transparência e o conhecimento científico. Sabemos que projetos inovadores como o nosso podem gerar dúvidas — e é exatamente por isso que criamos este espaço. Nossa equipe está pronta para responder todas as suas perguntas e fornecer suporte necessário para que você possa aproveitar ao máximo tudo o que o 777Py tem a oferecer.</p>
                 </nav>
                 <nav>
-                    <p class="textoSecaoLado">No entanto, naturalmente, entendemos que cada <span class="textoColorido">usuário</span> tem necessidades específicas. E, estamos sempre prontos para ajudar <span class="textoColorido">você</span>, caso a sua dúvida não esteja na área abaixo ou deseja saber mais sobre nosso projeto, nossa pesquisa ou qualquer outro aspecto do 777PY, não hesite e entre em contato connosco pelos <span class="textoColorido">canais oficiais da 777PY</span> que você preferir.</p>
+                    <p class="textoSecaoLado">No entanto, naturalmente, entendemos que cada <span class="textoColorido">usuário</span> tem necessidades específicas. E, estamos sempre prontos para ajudar <span class="textoColorido">você</span>, caso a sua dúvida não esteja na área abaixo ou deseja saber mais sobre nosso projeto, nossa pesquisa ou qualquer outro aspecto do 777, não hesite e entre em contato connosco pelos <span class="textoColorido">canais oficiais</span> que você preferir.</p>
                 </nav>
             </div>
             <div class="conteudoPerguntas">
@@ -561,18 +561,34 @@
         </section>
 
         <footer>
-            <nav class="navLogoFooter">
-                <a href="#"><h1>777<sup>PY &copy;</sup></h1></a>
+            <nav>
+                <a href="#" rel="_top"><img src="assets/img/logo.png" alt="" srcset=""></a>
             </nav>
             <nav>
-                <a href="views/termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a> &nbsp;
-                <a href="views/politica.html" rel="noopener noreferrer nofollow">Políticas de Privacidade</a>
+                <a href="#">Termos e Condições</a>
+                <a href="#">Política de Privacidade</a>
+                <a href="#">Perguntas Frequentes</a>
+                <a href="#">Como Funciona?</a>
             </nav>
             <nav>
-                <a href="#"><i class="fa-brands fa-square-facebook iconeRedesSociais"></i></a>
-                <a href="#"><i class="fa-brands fa-square-whatsapp iconeRedesSociais"></i></a>
-                <a href="#"><i class="fa-brands fa-square-instagram iconeRedesSociais"></i></a>
-                <a href="#"><i class="fa-brands fa-square-x-twitter iconeRedesSociais"></i></a>
+                <div>Luanda, Angola</div>
+                <div>
+                    <a href="#"><i class="fa-brands fa-facebook-f socialRodape"></i></a>
+                    <a href="#"><i class="fa-brands fa-whatsapp socialRodape"></i></a>
+                    <a href="#"><i class="fa-solid fa-paper-plane socialRodape"></i></a>
+                    <a href="#"><i class="fa-solid fa-phone socialRodape"></i></a>
+                    <a href="#"><i class="fa-brands fa-github socialRodape"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram socialRodape"></i></a>
+                </div>
+                <div>
+                    <p>
+                        <script>
+                            var ano =  new Date;
+                            var anoAtual = ano.getFullYear();
+                            document.write("&copy;" + anoAtual + " — <span style='font-weight: 800;'>777<sup>PY</sup></span> — Todos os direitos reservados")
+                        </script>
+                    </p>
+                </div>
             </nav>
         </footer>
     </main>
