--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div id="preloader">
+        <div class="preloader-container">
+          <img src="assets/img/loader.gif" alt="Carregando..." class="preloader-gif" />
+          <p class="preloader-text">Preparando os <span style="color: #40E194;">2.5 milhões</span> para você...</p>
+        </div>
+      </div>
 
     <div id="cursor"></div>
     
