--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         <div id="divEnviarPalpite">
             <form action="#">
                 <div class="imgForm">
-                    <img src="assets/img/img_form.jpg" alt="imagem do formulário" srcset="assets/img/img_form.jpg">
+                    <!-- <img src="assets/img/img_form.jpg" alt="imagem do formulário" srcset="assets/img/img_form.jpg"> -->
+                    <img src="assets/img/hero1.gif" alt="imagem do formulário" srcset="">
                 </div>
                 <div>
                     <nav>
@@ -172,10 +173,10 @@
             </form>
         </div>
 
-        <section class="secao1">
+        <section class="secao secao1">
             <nav class="slide-left">
                 <h1 id="titleHero" draggable="false">Prevemos o <span class="textoEfeito">futuro!</span> O seu <span class="textoEfeito">palpite,</span> a nossa <span class="textoEfeito">ciência.</span></h1>
-                <p id="textoHero">Se chegaste até a <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span>, é porque dentro de ti existe um sonhador, um pensador, um visionário. Se estás aqui, és alguém que vê o jogo diferente, que sente o momento, analisa, conecta os pontos e <span class="textoColoridoVerde textoBold">transforma palpite em 2.5 milhões em apenas 10 dias</span>. Acreditamos no teu talento, na tua leitura de jogo, na tua coragem e na tua vontade de ser milionário em 10 dias. Entra nesse desafio com confiança, mostre o teu raciocínio. A pergunta é simples: <span class="textoGradiente" style="font-weight: bold;">Vais continuar a sonhar… ou se tornarás milionário em 10 dias?</span></p>
+                <p id="textoHero">Se chegaste até a <span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span>, é porque dentro de ti existe um sonhador, um pensador, um visionário. Se estás aqui, és alguém que vê o jogo diferente, que sente o momento, analisa, conecta os pontos e <span class="textoColoridoVerde textoBold">transforma palpite em 2.5 milhões de kwanzas em apenas 10 dias</span>. Acreditamos no teu talento, na tua leitura de jogo, na tua coragem e na tua vontade de ser milionário em 10 dias. Entra nesse desafio com confiança, mostre o teu raciocínio. A pergunta é simples: <span class="textoGradiente" style="font-weight: bold;">Vais continuar a sonhar… ou se tornarás milionário em 10 dias?</span></p>
                 <nav class="navBtns">
                     <a href="#"><button class="btn btn0">Saiba Mais</button></a>
                     <a href="#video"><button class="btn">Assistir Vídeo Explicativo <i class="fa-solid fa-circle-play" style="font-size: 13pt;"></i></button></a>
@@ -340,7 +341,7 @@
                         Calebe "CL" Lukombo
                     </nav>
                     <nav class="statusFundador">
-                        CEO e fundador
+                        Diretor Executivo (CEO) e fundador
                     </nav>
                     <nav class="sobreFundador">Criamos a 777PY porque acreditamos que ciência também é coragem. 777 é um movimento, o ponto onde a estatística encara a ousadia e a pura anti-estatística.</nav>
                     <div class="efeitoCard1 efeitoCard"></div>
@@ -355,7 +356,7 @@
                         Maria Lumengo
                     </nav>
                     <nav class="statusFundador">
-                        Co-CEO e fundadora
+                        Co-Diretora Executiva (Co-CEO) e fundadora
                     </nav>
                     <nav class="sobreFundador">Onde dizem que é sorte, há mais que a Lei dos Grandes Números — há inteligência feminina. Os dados não mentem, e nem as mulheres que os dominam.</nav>
                     <div class="efeitoCard3 efeitoCard"></div>
@@ -370,7 +371,7 @@
                         Adilson "AL" Lukombo
                     </nav>
                     <nav class="statusFundador">
-                        Diretor e fundador
+                        Diretor de Operações (COO) e Co-fundador
                     </nav>
                     <nav class="sobreFundador">O impossível só é impossível até alguém fazê-lo. Há muita coisa para se aprender, muita coisa para se estudar — perder tempo jamais será opção.</nav>
                     <div class="efeitoCard5 efeitoCard"></div>
@@ -385,7 +386,7 @@
                         Nkosi Simão
                     </nav>
                     <nav class="statusFundador">
-                        Diretor de Marketing e fundador
+                        Diretor de Marketing (CMO) e Co-fundador
                     </nav>
                     <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus.</nav>
                     <div class="efeitoCard7 efeitoCard"></div>
@@ -400,7 +401,7 @@
                         Aguinaldo "AG" Jacob
                     </nav>
                     <nav class="statusFundador">
-                        Analista de Dados e fundador
+                        Diretor de Dados (CDO) e Co-fundador
                     </nav>
                     <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus</nav>
                     <div class="efeitoCard9 efeitoCard"></div>
@@ -415,7 +416,7 @@
                         Nacho
                     </nav>
                     <nav class="statusFundador">
-                        Vice-Diretor e Fundador
+                        Vice-Diretor de Operações e Co-fundador
                     </nav>
                     <nav class="sobreFundador">Fundamos o 777 porque queríamos mudar o jogo. Se você está aqui, é porque também carrega essa vontade de revolução: nas apostas e na própia vida.</nav>
                     <div class="efeitoCard11 efeitoCard"></div>
@@ -430,7 +431,7 @@
                         Alexandre Afonso
                     </nav>
                     <nav class="statusFundador">
-                        Fundador
+                        Diretor de Recursos Humanos (CHRO) e Co-fundador
                     </nav>
                     <nav class="sobreFundador">Somos jovens negros, africanos, sonhadores e criadores de um movimento ousado e transformador. Somos angolanos, somos o futuro, somos ciência!</nav>
                     <div class="efeitoCard13 efeitoCard"></div>
@@ -445,7 +446,7 @@
                         Nalita Kiambi Rodrigues
                     </nav>
                     <nav class="statusFundador">
-                        Secretária, Analista de Dados e fundadora
+                        Diretora Financeira (CFO), Diretora de Análise de Dados e Co-fundadora
                     </nav>
                     <nav class="sobreFundador">Acredito que com o 777 e esse movimento podemos inspirar mais mulheres angolanas a se apaixonarem por números, códigos e pelo poder da ciência.</nav>
                     <div class="efeitoCard15 efeitoCard"></div>
@@ -556,7 +557,7 @@
             </div>
 
             <nav class="VerTodasQuestoes" style="display: flex; justify-content: center; padding-top: 1rem;">
-                <button class="btn">Questões Frequentes</button>
+                <button class="btn">Priorizamos a clareza, a transparência e o conhecimento.</button>
             </nav>
         </section>
 
@@ -607,6 +608,7 @@
             </nav>
         </footer>
     </main>
+    
     <script>
         document.addEventListener('DOMContentLoaded', function() {
     const carousel = document.querySelector('.conteudoPerguntas');
