Ajustes no preloader e cards

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-AO" draggable="false">
 <head>
     <meta charset="UTF-8"> 
-    <script src="assets/js/script.js" defer></script>
     <meta property="og:type" content="website">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
+    <script src="assets/js/script.js" defer></script>
     <title>777PY | Seu palpite, nossa ciência!</title>
     <meta name="author" content="Calebe 'CL' Lukombo">
     <link rel="canonical" href="https://www.777py.com">
@@ -16,10 +16,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/img/logo_ico.ico" type="image/x-icon">
     <meta property="og:image" content="https://www.777py.com/imagens/777py-cover.png">
-    <meta property="og:title" content="777py - Previsões Inteligentes para Esportes, Política e Clima">
-    <meta name="keywords" content="777py, 777Angola, apostas, aposta em Angola, palpites, ciência, estatísticas">
-    <meta property="og:description" content="O 777py usa IA e estatísticas avançadas para prever eventos esportivos, políticos e climáticos com precisão.">
-    <meta name="description" content="Antecipe resultados com o 777py - software de previsões desportivas, políticas e climáticas baseado em ciência, matemática e inteligência artificial.">
+    <meta property="og:title" content="777PY - Previsões Inteligentes para Esportes, Política e Clima">
+    <meta name="keywords" content="777py, 777Angola, 777, site de palpites, apostas, aposta em Angola, palpites, ciência, estatísticas">
+    <meta property="og:description" content="O 777PY usa IA e estatísticas avançadas para prever eventos esportivos, políticos e climáticos com precisão.">
+    <meta name="description" content="Antecipe resultados com o 777PY - software de previsões desportivas, políticas e climáticas baseado em ciência, matemática e inteligência artificial.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body draggable="false">
@@ -332,10 +332,11 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Conheça a <span class="textoSemEfeito">777<sup style="color: #40E194; -webkit-text-stroke: #40E194;">PY</sup></span></h2>
-                    <p class="textoSecao">É um projeto e startup <span class="textoBold">100% angolana</span>, idealizada e fundada por jovens angolanos apaixonados por tecnologia, matemática e ciência. Nasceu de uma visão ousada: transformar a intuição e o conhecimento dos palpiteiros em dados valiosos no universo das estátisticas e previsões de diferentes eventos. O nome "<span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span>" carrega dois símbolos poderosos: <span class="textoBold" style="font-family: 'Libre Franklin';">777</span> é um número que carrega significados profundos em - espiritualidade, cultura, matemática, religião, simbologia e até no mundo dos jogos - é considerado um número matematicamente fascinante e divinamente perfeito. O <span class="textoBold textoColoridoVerde">PY</span> é homenagem a Python, a linguagem de programação usada nos nossos algoritmos e análises.</p>
+                    <p class="textoSecao">É um projeto e startup <span class="textoBold">100% angolana</span>, idealizada e fundada por jovens angolanos apaixonados por ciência e matemática. Nasceu de uma visão ousada: transformar a intuição e o conhecimento dos palpiteiros em dados valiosos no universo das estátisticas e previsões de diferentes eventos. O nome "<span style="font-weight: 500; font-family: 'Libre Franklin';">777<sup>PY</sup></span>" carrega dois símbolos poderosos: <span class="textoBold" style="font-family: 'Libre Franklin';">777</span> é um número que carrega significados profundos em - espiritualidade, cultura, matemática, religião, simbologia e até no mundo dos jogos - é considerado um número matematicamente fascinante e divinamente perfeito. O <span class="textoBold textoColoridoVerde">PY</span> é homenagem a Python, a linguagem de programação usada nos nossos algoritmos e análises.</p>
                 </nav>
+
                 <nav>
-                    <p class="textoSecaoLado">A nossa equipe é uma combinação de <span class="textoColorido">nerds, cientistas da computação, programadores, designers, matemáticos e teóricos de estatísticas.</span> Juntos, acreditamos podemos criar algo grandioso e abrir<span class="textoColorido"> oportunidades reais a apostadores</span> talentosos e sonhadores. Aqui, <span class="textoColorido">o teu raciocínio</span> é valorizado.</p>
+                    <p class="textoSecaoLado">A nossa equipe é uma combinação de <span class="textoColorido">nerds, cientistas da computação, programadores, matemáticos e teóricos de estatísticas.</span> Juntos, acreditamos que podemos criar algo grandioso e abrir<span class="textoColorido"> oportunidades reais a palpiteiros</span> talentosos e sonhadores. Aqui, <span class="textoColorido">o teu raciocínio</span> é valorizado.</p>
                 </nav>
             </div>
             <div class="conteudoSecao4">
@@ -351,7 +352,7 @@
                     <nav class="statusFundador">
                         Diretor Executivo (CEO) e fundador
                     </nav>
-                    <nav class="sobreFundador">Criamos a 777PY porque acreditamos que ciência também é coragem. 777 é um movimento, o ponto onde a estatística encara a ousadia e a pura anti-estatística.</nav>
+                    <nav class="sobreFundador">Criamos a 777PY porque acreditamos que ciência também é coragem. 777 é um movimento, o ponto onde a estatística encara a arrogância e a pura anti-estatística.</nav>
                     <div class="efeitoCard1 efeitoCard"></div>
                 </nav>
 
@@ -379,7 +380,7 @@
                         Adilson "AL" Lukombo
                     </nav>
                     <nav class="statusFundador">
-                        Diretor de Operações (COO) e Co-fundador
+                        Diretor de Operações (COO) e fundador
                     </nav>
                     <nav class="sobreFundador">Na 777, mostraremos que o impossível só é impossível até alguém fazê-lo. Mostraremos que existem pessoas capazes de encarar, desafiar e vencer o improvável.</nav>
                     <div class="efeitoCard5 efeitoCard"></div>
@@ -394,7 +395,7 @@
                         Aguinaldo "AG" Jacob
                     </nav>
                     <nav class="statusFundador">
-                        Diretor de Dados (CDO) e Co-fundador
+                        Diretor de Dados (CDO), Consultor e fundador
                     </nav>
                     <nav class="sobreFundador">Temos o desejo de tornar as previsões precisas. Trazer valor aos palpiteiros, dar-lhes a chance de serem ícones e não serem vistos como meros jogadores ou apostadores.</nav>
                     <div class="efeitoCard9 efeitoCard"></div>
@@ -409,7 +410,7 @@
                         Nkosi Simão
                     </nav>
                     <nav class="statusFundador">
-                        Diretor de Análise de Dados, Diretor de Marketing (CMO) e Co-fundador
+                        Diretor de Análise de Dados, Diretor de Marketing (CMO) e fundador
                     </nav>
                     <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus.</nav>
                     <div class="efeitoCard7 efeitoCard"></div>
@@ -424,7 +425,7 @@
                         Alexandre Afonso
                     </nav>
                     <nav class="statusFundador">
-                        Diretor de Recursos Humanos (CHRO), Co-Diretor de Marketing (Co-CMO) e Co-fundador
+                        Diretor de Recursos Humanos (CHRO), Co-Diretor de Marketing (Co-CMO) e fundador
                     </nav>
                     <nav class="sobreFundador">Somos jovens negros, africanos, sonhadores e criadores de um movimento ousado e transformador. Somos angolanos, somos o futuro, somos ciência!</nav>
                     <div class="efeitoCard13 efeitoCard"></div>
@@ -439,9 +440,9 @@
                         Nacho
                     </nav>
                     <nav class="statusFundador">
-                        Co-Diretor de Operações (Co-COO) e Co-fundador
+                        Co-Diretor de Operações (Co-COO) e fundador
                     </nav>
-                    <nav class="sobreFundador">Mudaremos o jogo. Se você está aqui, é porque carregas essa vontade de revolução: nos palpites e na própia vida.</nav>
+                    <nav class="sobreFundador">Na 777PY queremos mudar o jogo e os palpiteiros. Se você está aqui, é porque carregas essa vontade de revolução: nos palpites e na própia vida.</nav>
                     <div class="efeitoCard11 efeitoCard"></div>
                 </nav>
 
@@ -454,7 +455,7 @@
                         Nalita Kiambi Rodrigues
                     </nav>
                     <nav class="statusFundador">
-                        Diretora Financeira (CFO), Co-Diretora de Recursos Humanos (Co-CHRO), Co-Diretora de Marketing (Co-CMO) e Co-fundadora
+                        Diretora Financeira (CFO), Co-Diretora de Recursos Humanos (Co-CHRO), Co-Diretora de Marketing (Co-CMO) e fundadora
                     </nav>
                     <nav class="sobreFundador">Acredito que com o 777, com esse movimento podemos inspirar mais mulheres angolanas a se apaixonarem por números, códigos e pelo poder da ciência.</nav>
                     <div class="efeitoCard15 efeitoCard"></div>
