--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="preloader">
         <div class="preloader-container">
           <img src="assets/img/loader.gif" alt="Carregando..." class="preloader-gif" draggable="false">
-          <p class="preloader-text">Os seus <span class="textoColoridoVerde">2.5 milhões</span> estão quase prontos<span class="textoColoridoVerde">...</span></p>
+          <p class="preloader-text">Os seus <span class="textoColoridoVerde">2.5 milhões</span> estão quase prontos</p>
         </div>
       </div>
 
