Dizeres dos fundadores

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                     <nav class="statusFundador">
                         Diretor de Análise de Dados, Diretor de Marketing (CMO) e fundador
                     </nav>
-                    <nav class="sobreFundador">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis eaque quaerat sed ducimus hic repellendus reiciendis accusamus.</nav>
+                    <nav class="sobreFundador">Se estamos aqui é porque ousamos sonhar mais alto do que a média, ousamos desafiar a lógica e o destino. E venceremos com que estiver connosco.</nav>
                     <div class="efeitoCard7 efeitoCard"></div>
                 </nav>
 
@@ -442,7 +442,7 @@
                     <nav class="statusFundador">
                         Co-Diretor de Operações (Co-COO) e fundador
                     </nav>
-                    <nav class="sobreFundador">Na 777PY queremos mudar o jogo e os palpiteiros. Se você está aqui, é porque carregas essa vontade de revolução: nos palpites e na própia vida.</nav>
+                    <nav class="sobreFundador">777 é feita de pessoas que desafiam os limites durante 10 dias. Pessoas que acreditam no impossível - são os nosso recurso mais valioso.</nav>
                     <div class="efeitoCard11 efeitoCard"></div>
                 </nav>
 
