--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <nav class="contentInputForm">
                             <nav class="navContentCheck">
                                 <nav>
-                                    <span>Ao enviar, eu aceito e autorizo o tratamento e uso das informações fornecidos por mim conforme a <a href="views/politica.html" rel="noopener noreferrer nofollow">Política de Privacidade</a> e os <a href="views/termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a> da 777PY</span>
+                                    <span>Ao enviar, você aceita a <a href="views/politica.html" rel="noopener noreferrer nofollow">Política de Privacidade</a> e os <a href="views/termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a> da 777PY</span>
                                 </nav>
                             </nav>
                         </nav>
