--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <p class="textoSecao">Sabemos que, de acordo a lei angolana, menores de idade não podem participar em apostas ou jogos de azar. Esclarecemos veementemente que o 777 não é uma casa de aposta, não temos filiação com alguma casa de aposta e nem promove jogos de azar. Promovemos uma pesquisa cientifíca e experimentos que visam aprimorar e treinar o nosso software e analisar como pessoas de diferentes idades lidam com decisões baseadas em probabilidades. O único compromisso exigido é o seu palpite certeiro.</p>
                 </nav>
                 <nav>
-                    <p class="textoSecaoLado">Todos podem participar, é um desafio abrangente e inclusivo. Não proibições de <span class="textoColorido">idade, género, habilidades, nacionalidade ou preferências desportivas.</span> Esperamos por si e pelos seus palpites.</p>
+                    <p class="textoSecaoLado">Todos podem participar, é um desafio abrangente e inclusivo. Não há proibições de <span class="textoColorido">idade, género, habilidades, nacionalidade ou preferências desportivas.</span> Esperamos por si e pelos seus palpites.</p>
                 </nav>
             </div>
 
