Melhorias no formulário

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="divTopoSecao">
                 <nav>
                     <h2 class="tituloSecao">Saiba<span class="textoSemEfeito"> Como Funciona.</span></h2>
-                    <p class="textoSecao">Estamos à tua espera — e acreditamos que o teu palpite vale ouro. 777 é um verdadeiro teste de visão, estratégia e coragem. Na 777 cada escolha conta, cada detalhe importa. Aqui, você tem a total liberdade para mostrares o teu talento nas modalidades que dominas.</p>
+                    <p class="textoSecao"><span class="textoBold">Apenas 1 erro é permitido</span> - ele reduz o seu prémio final. Mas, o <span class="textoBold">segundo erro te elimina</span> imediatamente do desafio. <span class="textoBold">Mas atenção: </span>Se chegares até à fase Nzambi sem errar nenhuma vez, ganhas um <span class="textoBold">bónus especial</span>. E se, venceres às 3 fases sem errar, <span class="textoBold">além de ganhares 2.5 milhões de kwanzas</span>, o teu <span class="textoBold">bónus secreto será duplicado!</span> Estamos à tua espera — e acreditamos que o teu palpite vale ouro. 777 é um verdadeiro teste de visão, estratégia e coragem. Aqui, cada escolha conta, cada detalhe importa.</p>
                 </nav>
                 <nav>
                     <p class="textoSecaoLado">Acreditamos em você e na tua estratégia que o ajudará a <span class="textoColorido">ganhar milhões de kwanzas</span> em 10 dias. Junte-se a <span class="textoColorido">777PY</span> e mostre o poder da tua <span class="textoColorido">intuição, raciocínio e palpites.</span> Transforme em conquistas <span class="textoColorido">reais e lucrativas.</span></p>
@@ -230,19 +230,58 @@
                         <span>2</span>
                     </nav>
                     <nav class="iconeFuncione">
-                        <i class="fa-solid fa-chart-line"></i>
+                        <i class="fa-solid fa-1"></i>-
+                        <i class="fa-solid fa-2"></i>-
+                        <i class="fa-solid fa-3"></i>
                     </nav>
                     <nav class="titleFunciona">
-                        <h4>Verifique as odds/pontos</h4>
+                        <h4>3 fases, uma chance</h4>
                     </nav>
                     <nav>
-                        <p class="textoFunciona">Antes de enviar, verifica se o <span class="texttoBold">total de odds</span> está <span class="textoBold">entre 4</span> e <span class="textoBold">10 pontos</span> — abaixo de 4 ou acima de 10 será inválido! Recomendamos sempre <span class="textoBold">revisar as odds antes de enviar</span>, garantindo que o palpite esteja dentro do intervalo exigido, <span class="textoBold">um bom palpite começa numa boa análise.</span></p>
+                        <p class="textoFunciona">Com 10 dias e 3 fases, cada escolha conta.
+                            <nav>
+                                <h6 class="tituloFaseCardFunciona">Fase 1: Lungoki (3 dias)</h6>
+                                <ul class="listaCardFunciona">
+                                    <li><span class="textoBold">Mostre consistência</span></li>
+                                    <li><span class="textoBold">Odds mínimas:</span> 3 pontos</li>
+                                </ul>
+                            </nav>
+                            <nav>
+                                <h6 class="tituloFaseCardFunciona">Fase 2: Longi (3 dias)</h6>
+                                <ul class="listaCardFunciona">
+                                    <li><span class="textoBold">Prove sua estratégia</span></li>
+                                    <li><span class="textoBold">Odds mínimas:</span> 4 pontos</li>
+                                </ul>
+                            </nav>
+                            <nav>
+                                <h6 class="tituloFaseCardFunciona">Fase 3: Nzambi (4 dias)</h6>
+                                <ul class="listaCardFunciona">
+                                    <li><span class="textoBold">Seja da elite</span></li>
+                                    <li><span class="textoBold">Odds mínimas:</span> 5 pontos</li>
+                                </ul>
+                            </nav>
+                        </p>
                     </nav>
                 </nav>
 
                 <nav class="cardFunciona" id="card3">
                     <nav class="numeroFunciona">
                         <span>3</span>
+                    </nav>
+                    <nav class="iconeFuncione">
+                        <i class="fa-solid fa-chart-line"></i>
+                    </nav>
+                    <nav class="titleFunciona">
+                        <h4>Verifique as odds e fase</h4>
+                    </nav>
+                    <nav>
+                        <p class="textoFunciona">Antes de enviar, verifica se o <span class="texttoBold">total de odds</span> se está acordo a tua fase <span class="textoBold"> odds máximas são 10 pontos</span> — acima de 10 pontos será inválido! Recomendamos sempre <span class="textoBold">revisar as odds e a sua fase antes de enviar</span>, garantindo que o palpite esteja dentro do intervalo exigido, <span class="textoBold">um bom palpite começa numa boa análise.</span></p>
+                    </nav>
+                </nav>
+
+                <nav class="cardFunciona" id="card4">
+                    <nav class="numeroFunciona">
+                        <span>4</span>
                     </nav>
                     <nav class="iconeFuncione">
                         <i class="fa-solid fa-paper-plane"></i>
@@ -252,21 +291,6 @@
                     </nav>
                     <nav>
                         <p class="textoFunciona">Com os jogos escolhidos e o total de odds certo, é <span class="textoBold">hora de enviar o teu palpite.</span>. Podes fazer isso de três formas: <span class="textoBold">digitando</span>, enviando uma <span class="textoBold">captura de ecrã (print)</span> ou apenas <span class="textoBold">mandando o ID</span>. Usa o canal que preferires — Website, WhatsApp, e-mail ou Facebook —  <span class="textoBold">e estás dentro do desafio!</span></p>
-                    </nav>
-                </nav>
-                
-                <nav class="cardFunciona" id="card4">
-                    <nav class="numeroFunciona">
-                        <span>4</span>
-                    </nav>
-                    <nav class="iconeFuncione">
-                        <i class="fa-solid fa-calendar-days"></i>
-                    </nav>
-                    <nav class="titleFunciona">
-                        <h4>Faça durante 10 dias</h4>
-                    </nav>
-                    <nav>
-                        <p class="textoFunciona">Depois de enviares o teu primeiro palpite, <span class="textoBold">continua firme</span> no desafio <span class="textoBold">por 10 dias consecutivos.</span> Durante esse tempo, acompanha cada palpite enviado com atenção. <span class="textoBold">Se acertares todos,</span> além de poderes ser convidado a <span class="textoBold">trabalhar</span> connosco <span class="textoBold">na 777PY e </span>ainda <span class="textoBold">ganhas 2.500.000 Kzs</span> (2.5 milhões de kwanzas) — no ato!</p>
                     </nav>
                 </nav>
 
@@ -281,7 +305,7 @@
                         <h4>Torne-se milionário em 10 dias</h4>
                     </nav>
                     <nav>
-                        <p class="textoFunciona"><span class="textoBold">Acertaste os 10 dias?</span> Parabéns, você é um <span class="textoBold">milionário em apenas 10 dias </span>oficialmente. <span class="textoBold">Mesmo que haja 10 ganhadores, todos recebem o valor completo, sem divisão ou redução.</span></p> <br> <p class="textoFunciona"> <span class="textoBold" style="color: red;">Atenção:</span> Se errar 1 dia, você será desclassificado ou ter o prémio ajustado <span class="textoBold">dependendo do teu desempenho.</span></p>
+                        <p class="textoFunciona"><span class="textoBold">Acertaste os 10 dias?</span> Parabéns, você é um <span class="textoBold">milionário em apenas 10 dias </span>oficialmente. <span class="textoBold">Mesmo que haja 10 ganhadores, todos recebem o valor completo, sem divisão ou redução.</span> <br> Além dos 2.5 milhões de kwanzas, <span class="textoBold">o seu bónus especial será duplicado.</span></p>
                     </nav>
                 </nav>
 
