--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"> 
     <meta property="og:type" content="website">
+    <meta name="theme-color" content="#40E194">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <script src="assets/js/script.js" defer></script>
@@ -20,8 +21,26 @@
     <meta name="keywords" content="777py, 777Angola, 777, site de palpites, apostas, aposta em Angola, palpites, ciência, estatísticas">
     <meta property="og:description" content="O 777PY usa IA e estatísticas avançadas para prever eventos esportivos, políticos e climáticos com precisão.">
     <meta name="description" content="Antecipe resultados com o 777PY - software de previsões desportivas, políticas e climáticas baseado em ciência, matemática e inteligência artificial.">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    </noscript>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "WebSite",
+          "name": "777PY",
+          "url": "https://www.777py.com",
+          "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://www.777py.com/search?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+          }
+        }
+    </script>
 </head>
+
 <body draggable="false">
     <div id="preloader">
         <div class="preloader-container">
@@ -34,20 +53,20 @@
     
     <header class="menu">
         <nav>
-            <a href="./" rel="noopener noreferrer nofollow">
+            <a href="./">
                 <img src="assets/img/logo.png" alt="imagem da logo do 777PY" srcset="assets/img/logo.png" class="imgLogoMenu" draggable="false">
             </a>
         </nav>
         <nav class="navMobilePorra">
             <nav class="navLinksMenu">
                 <a href="./#" rel="_top" class="linksMenu">Página Inicial</a>
-                <a href="#comoFunciona" class="linksMenu" rel="noopener noreferrer nofollow">Como funciona?</a>
-                <a href="#quemPodeParticipar" class="linksMenu" rel="noopener noreferrer nofollow">Posso participar?</a>
-                <a href="#sobreNos" class="linksMenu" rel="noopener noreferrer nofollow">Quem somos?</a>
+                <a href="#comoFunciona" class="linksMenu">Como funciona?</a>
+                <a href="#quemPodeParticipar" class="linksMenu">Posso participar?</a>
+                <a href="#sobreNos" class="linksMenu">Quem somos?</a>
             </nav>
             <nav class="navBtns">
                 <a href="#"><button class="btn btn0">Contactar</button></a>
-                <a href="#" id="MostrarFomEnviar" target="_top" rel="noopener noreferrer nofollow"><button class="btn">Enviar Palpite <i class="fa-solid fa-paper-plane"></i></button></a>
+                <a href="#" id="MostrarFomEnviar" target="_top"><button class="btn">Enviar Palpite <i class="fa-solid fa-paper-plane"></i></button></a>
             </nav>
         </nav>
         <nav class="menuHamburguer">
@@ -67,7 +86,7 @@
                 <div>
                     <nav>
                         <nav>
-                            <a href="./" rel="noopener noreferrer nofollow" class="linkLogoForm"><img src="assets/img/logo.png" alt="" srcset="" draggable="false"></a>
+                            <a href="./" class="linkLogoForm"><img src="assets/img/logo.png" alt="imagem da logo do 777PY" srcset="assets/img/logo.png" draggable="false"></a>
                         </nav>
                         <h3 style="color: gray;">Bem-vindo! Lembre-se que <span class="textoColoridoVerde"> teu palpite pode mudar a tua vida</span> em apenas 10 dias e que na 777 o <span class="textoColoridoVerde">teu palpite vale 2.5 milhões </span> de kwanzas. <i class="fa-solid fa-heart textoColoridoVerde"></i></h3>
                     </nav>
@@ -155,7 +174,7 @@
                         <nav class="contentInputForm">
                             <nav class="navContentCheck">
                                 <nav>
-                                    <span>Ao enviar, você aceita a <a href="views/politica.html" rel="noopener noreferrer nofollow">Política de Privacidade</a> e os <a href="views/termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a> da 777PY</span>
+                                    <span>Ao enviar, você aceita a <a href="views/politica.html">Política de Privacidade</a> e os <a href="views/termos.html">Termos e Condições</a> da 777PY</span>
                                 </nav>
                             </nav>
                         </nav>
@@ -613,25 +632,25 @@
 
         <footer>
             <nav>
-                <a href="./#" rel="_top noopener noreferrer nofollow">
+                <a href="./#">
                     <img src="assets/img/logo.png" alt="logo da 777PY" srcset="assets/img/logo.png" draggable="false">
                 </a>
             </nav>
             <nav>
-                <a href="./views/termos.html" rel="noopener noreferrer nofollow">Termos e Condições</a>
-                <a href="./views/politica.html" rel="noopener noreferrer nofollow">Política de Privacidade</a>
-                <a href="#perguntasFrequentes" rel="noopener noreferrer nofollow">Perguntas Frequentes</a>
-                <a href="#comoFunciona" rel="noopener noreferrer nofollow">Como Funciona?</a>
+                <a href="./views/termos.html">Termos e Condições</a>
+                <a href="./views/politica.html">Política de Privacidade</a>
+                <a href="#perguntasFrequentes">Perguntas Frequentes</a>
+                <a href="#comoFunciona">Como Funciona?</a>
             </nav>
             <nav>
                 <div>Luanda, Angola</div>
                 <div>
-                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-brands fa-facebook-f socialRodape"></i></a>
-                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-brands fa-whatsapp socialRodape"></i></a>
-                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-solid fa-paper-plane socialRodape"></i></a>
-                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-solid fa-phone socialRodape"></i></a>
-                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-brands fa-github socialRodape"></i></a>
-                    <a href="#" rel="noopener noreferrer nofollow"><i class="fa-brands fa-instagram socialRodape"></i></a>
+                    <a href="#" rel="noopener"><i class="fa-brands fa-facebook-f socialRodape"></i></a>
+                    <a href="#" rel="noopener"><i class="fa-brands fa-whatsapp socialRodape"></i></a>
+                    <a href="#" rel="noopener"><i class="fa-solid fa-paper-plane socialRodape"></i></a>
+                    <a href="#" rel="noopener"><i class="fa-solid fa-phone socialRodape"></i></a>
+                    <a href="#" rel="noopener"><i class="fa-brands fa-github socialRodape"></i></a>
+                    <a href="#" rel="noopener"><i class="fa-brands fa-instagram socialRodape"></i></a>
                 </div>
                 <div>
                     <p>
